--- a/index.html
+++ b/index.html
@@ -147,137 +147,165 @@
     <!-- Clients Section -->
     <section class="clients-section">
       <div class="clients-container">
-        
-
         <div class="clients-slider">
           <div class="clients-track">
-            <div class="client-logo"><img src="/images/clientsimg/satlus.png"></div>
-            <div class="client-logo"><img src="/images/clientsimg/zentur.png"></div>
-            <div class="client-logo"><img src="/images/clientsimg/zoodle.png"></div>
-            <div class="client-logo"><img src="/images/clientsimg/renstore.avif"></div>
+            <div class="client-logo">
+              <img src="/images/clientsimg/satlus.png" />
+            </div>
+            <div class="client-logo">
+              <img src="/images/clientsimg/zentur.png" />
+            </div>
+            <div class="client-logo">
+              <img src="/images/clientsimg/zoodle.png" />
+            </div>
+            <div class="client-logo">
+              <img src="/images/clientsimg/renstore.avif" />
+            </div>
             <!-- <div class="client-logo"><img src="/images/clientsimg/travel.png"></div> -->
-            <div class="client-logo"><img src="/images/clientsimg/gem.png"></div>
-            <div class="client-logo"><img src="/images/clientsimg/satlus.png"></div>
-            <div class="client-logo"><img src="/images/clientsimg/zentur.png"></div>
-            <div class="client-logo"><img src="/images/clientsimg/zoodle.png"></div>
-            <div class="client-logo"><img src="/images/clientsimg/renstore.avif"></div>
-            <!-- <div class="client-logo"><img src="/images/clientsimg/travel.png"></div> -->
-            <div class="client-logo"><img src="/images/clientsimg/gem.png"></div>
+            <div class="client-logo">
+              <img src="/images/clientsimg/gem.png" />
+            </div>
+            <div class="client-logo">
+              <img src="/images/clientsimg/satlus.png" />
+            </div>
+            <div class="client-logo">
+              <img src="/images/clientsimg/zentur.png" />
+            </div>
+            <div class="client-logo">
+              <img src="/images/clientsimg/zoodle.png" />
+            </div>
+            <div class="client-logo">
+              <img src="/images/clientsimg/renstore.avif" />
+            </div>
+            
+            <div class="client-logo">
+              <img src="/images/clientsimg/gem.png" />
+            </div>
           </div>
         </div>
       </div>
     </section>
 
-    <hr />
-
     <!----------- Services -------------->
-    <section class="services-section">
-      <div class="section-header">
-        <div class="section-title">
-          <!-- <div class="section-icon"></div> -->
-          <div>
-            <div class="services-label1">
-              <i class="fa-regular fa-circle"></i> OUR SERVICES
+    <section style="background-color: #1e293b;">
+      <section class="services-section">
+        <div class="section-header">
+          <div class="section-title">
+            <!-- <div class="section-icon"></div> -->
+            <div>
+              <div class="services-label1">
+                <i class="fa-regular fa-circle"></i> OUR SERVICES
+              </div>
+              <h2 class="main-title">Empowering Your Success with Our Expertise</h2>
+              <p class="services-label1" style="font-size: 12px;">We bring knowledge, experience, and dedication to every project — so your business doesn’t just grow, it thrives.</p>
             </div>
-            <h2 class="main-title">Our Expertise Your Growth</h2>
           </div>
-        </div>
-        <a href="#" class="view-all-btn1">View All Services</a>
-      </div>
-
-      <div class="services-grid">
-        <div class="service-card">
-          <div class="service-icon web-icon">
-            <i class="fa-solid fa-object-group"></i>
-          </div>
-          <h3 class="service-title">Web Design</h3>
-          <p class="service-description">
-            At Smart Vision Techlabs we craft intuitive designs paired with a compelling user experience to set your UI/UX apart in the digital world. Our seamless.
-          </p>
-          <a href="#" class="read-more">Read More</a>
+          <a href="#" class="view-all-btn1">View All Services</a>
         </div>
 
-        <div class="service-card">
-          <div class="service-icon web-icon">
-            <i class="fa-solid fa-globe"></i>
+        <div class="services-grid">
+          <div class="service-card">
+            <div class="service-icon web-icon">
+              <i class="fa-solid fa-object-group"></i>
+            </div>
+            <h3 class="service-title">Web Design</h3>
+            <p class="service-description">
+              At Smart Vision Techlabs we craft intuitive designs paired with a
+              compelling user experience to set your UI/UX apart in the digital
+              world. Our seamless.
+            </p>
+            <a href="#" class="read-more">Read More</a>
           </div>
-          <h3 class="service-title">Web Development</h3>
-          <p class="service-description">
-            Smart Vision Techlabs is a premier web development company offering a wide range of custom-built websites, web portals, and web applications. Utilizing the latest.
-          </p>
-          <a href="#" class="read-more">Read More</a>
-        </div>
 
-        <div class="service-card">
-          <div class="service-icon web-icon">
-            <i class="fa-solid fa-mobile-screen-button"></i>
+          <div class="service-card">
+            <div class="service-icon web-icon">
+              <i class="fa-solid fa-globe"></i>
+            </div>
+            <h3 class="service-title">Web Development</h3>
+            <p class="service-description">
+              Smart Vision Techlabs is a premier web development company
+              offering a wide range of custom-built websites, web portals, and
+              web applications. Utilizing the latest.
+            </p>
+            <a href="#" class="read-more">Read More</a>
           </div>
-          <h3 class="service-title">Mobile App Development</h3>
-          <p class="service-description">
-            As a leading mobile app development company in India, our team of expert iOS and Android developers excels at transforming your vision into.
-          </p>
-          <a href="#" class="read-more">Read More</a>
-        </div>
 
-        <div class="service-card">
-          <div class="service-icon seo-icon">
-            <i class="fa-solid fa-magnifying-glass"></i>
+          <div class="service-card">
+            <div class="service-icon web-icon">
+              <i class="fa-solid fa-mobile-screen-button"></i>
+            </div>
+            <h3 class="service-title">Mobile App Development</h3>
+            <p class="service-description">
+              As a leading mobile app development company in India, our team of
+              expert iOS and Android developers excels at transforming your
+              vision into.
+            </p>
+            <a href="#" class="read-more">Read More</a>
           </div>
-          <h3 class="service-title">Search Engine Optimization (SEO)</h3>
-          <p class="service-description">
-            Our expertly crafted SEO strategy is designed to meet your unique business needs. By implementing targeted keyword research and optimization, we ensure your website rises to the top of.
-          </p>
-          <a href="#" class="read-more">Read More</a>
-        </div>
 
-        <div class="service-card">
-          <div class="service-icon smm-icon">
-            <i class="fa-solid fa-person"></i>
+          <div class="service-card">
+            <div class="service-icon seo-icon">
+              <i class="fa-solid fa-magnifying-glass"></i>
+            </div>
+            <h3 class="service-title">Search Engine Optimization (SEO)</h3>
+            <p class="service-description">
+              Our expertly crafted SEO strategy is designed to meet your unique
+              business needs. By implementing targeted keyword research and
+              optimization, we ensure your website rises to the top of.
+            </p>
+            <a href="#" class="read-more">Read More</a>
           </div>
-          <h3 class="service-title">Social Media Optimization (SMO)</h3>
-          <p class="service-description">
-            At Smart Vision TechLabs, we combine creativity with data-driven strategies to deliver SMO services that elevate your brand’s online presence.
-          </p>
-          <a href="#" class="read-more">Read More</a>
-        </div>
 
-        <div class="service-card">
-          <div class="service-icon ppc-icon">
-            <i class="fa-solid fa-upload"></i>
+          <div class="service-card">
+            <div class="service-icon smm-icon">
+              <i class="fa-solid fa-person"></i>
+            </div>
+            <h3 class="service-title">Social Media Optimization (SMO)</h3>
+            <p class="service-description">
+              At Smart Vision TechLabs, we combine creativity with data-driven
+              strategies to deliver SMO services that elevate your brand’s
+              online presence.
+            </p>
+            <a href="#" class="read-more">Read More</a>
           </div>
-          <h3 class="service-title">Pay-Per-Click Advertising (PPC)</h3>
-          <p class="service-description">
-            Maximize ROI With Targeted PPC Campaigns Designed To Convert Leads
-            Into Customers.
-          </p>
-          <a href="#" class="read-more">Read More</a>
-        </div>
 
-        <div class="service-card">
-          <div class="service-icon seo-icon">
-            <i class="fa-solid fa-basket-shopping"></i>
+          <div class="service-card">
+            <div class="service-icon ppc-icon">
+              <i class="fa-solid fa-upload"></i>
+            </div>
+            <h3 class="service-title">Pay-Per-Click Advertising (PPC)</h3>
+            <p class="service-description">
+              Maximize ROI With Targeted PPC Campaigns Designed To Convert Leads
+              Into Customers.
+            </p>
+            <a href="#" class="read-more">Read More</a>
           </div>
-          <h3 class="service-title">Ecommerce Platform Development</h3>
-          <p class="service-description">
-            At SmartVision TechLabs, we build stunning, reliable apps that scale with your business and work smoothly across all devices.
-          </p>
-          <a href="#" class="read-more">Read More</a>
-        </div>
 
-        <div class="service-card">
-          <div class="service-icon web-icon">
-            <i class="fa-solid fa-globe"></i>
+          <div class="service-card">
+            <div class="service-icon seo-icon">
+              <i class="fa-solid fa-basket-shopping"></i>
+            </div>
+            <h3 class="service-title">Ecommerce Platform Development</h3>
+            <p class="service-description">
+              At SmartVision TechLabs, we build stunning, reliable apps that
+              scale with your business and work smoothly across all devices.
+            </p>
+            <a href="#" class="read-more">Read More</a>
           </div>
-          <h3 class="service-title">Content Marketing</h3>
-          <p class="service-description">
-            Content Marketing Services Encompass Everything From Blog Posts And
-            Articles To Infographics Videos, Designed Boost.
-          </p>
-          <a href="#" class="read-more">Read More</a>
+
+          <div class="service-card">
+            <div class="service-icon web-icon">
+              <i class="fa-solid fa-globe"></i>
+            </div>
+            <h3 class="service-title">Content Marketing</h3>
+            <p class="service-description">
+              Content Marketing Services Encompass Everything From Blog Posts
+              And Articles To Infographics Videos, Designed Boost.
+            </p>
+            <a href="#" class="read-more">Read More</a>
+          </div>
         </div>
-
-
-      </div>
+      </section>
     </section>
 
     <!-- Who we are -->
@@ -413,10 +441,7 @@
         <!-- Web Design -->
         <div class="portfolio-card-box" data-category="webdesign">
           <div class="portfolio-card-image">
-            <img
-              src="/images/portfolio/1.png"
-              alt=""
-            />
+            <img src="/images/portfolio/1.png" alt="" />
           </div>
           <div class="portfolio-card-text-info">
             <div class="portfolio-category-label">Web Design</div>
@@ -426,10 +451,7 @@
         <!-- Graphics -->
         <div class="portfolio-card-box" data-category="graphics">
           <div class="portfolio-card-image">
-            <img
-              src="/images/portfolio/2.png"
-              alt=""
-            />
+            <img src="/images/portfolio/2.png" alt="" />
           </div>
           <div class="portfolio-card-text-info">
             <div class="portfolio-category-label">Graphics</div>
@@ -439,10 +461,7 @@
         <!-- Motion -->
         <div class="portfolio-card-box" data-category="motion">
           <div class="portfolio-card-image">
-            <img
-              src="/images/portfolio/3.png"
-              alt=""
-            />
+            <img src="/images/portfolio/3.png" alt="" />
           </div>
           <div class="portfolio-card-text-info">
             <div class="portfolio-category-label">Motion</div>
@@ -451,10 +470,7 @@
         </div>
         <div class="portfolio-card-box" data-category="branding">
           <div class="portfolio-card-image">
-            <img
-              src="/images/portfolio/4.png"
-              alt=""
-            />
+            <img src="/images/portfolio/4.png" alt="" />
           </div>
           <div class="portfolio-card-text-info">
             <div class="portfolio-category-label">Branding</div>
@@ -464,10 +480,7 @@
         <!-- Branding -->
         <div class="portfolio-card-box" data-category="branding">
           <div class="portfolio-card-image">
-            <img
-              src="/images/portfolio/4.png"
-              alt=""
-            />
+            <img src="/images/portfolio/4.png" alt="" />
           </div>
           <div class="portfolio-card-text-info">
             <div class="portfolio-category-label">Branding</div>
@@ -476,10 +489,7 @@
         </div>
         <div class="portfolio-card-box" data-category="branding">
           <div class="portfolio-card-image">
-            <img
-              src="/images/portfolio/4.png"
-              alt=""
-            />
+            <img src="/images/portfolio/4.png" alt="" />
           </div>
           <div class="portfolio-card-text-info">
             <div class="portfolio-category-label">Branding</div>
@@ -489,10 +499,7 @@
         <!-- Web Design -->
         <div class="portfolio-card-box" data-category="webdesign">
           <div class="portfolio-card-image">
-            <img
-              src="/images/portfolio/5.png"
-              alt=""
-            />
+            <img src="/images/portfolio/5.png" alt="" />
           </div>
           <div class="portfolio-card-text-info">
             <div class="portfolio-category-label">Web Design</div>
@@ -502,10 +509,7 @@
         <!-- Motion -->
         <div class="portfolio-card-box" data-category="motion">
           <div class="portfolio-card-image">
-            <img
-              src="/images/portfolio/8.png"
-              alt=""
-            />
+            <img src="/images/portfolio/8.png" alt="" />
           </div>
           <div class="portfolio-card-text-info">
             <div class="portfolio-category-label">Motion</div>
@@ -533,10 +537,13 @@
           <div class="slide-content">
             <h2>Research</h2>
             <p>
-              At the beginning of our collaboration, we take the time to thoroughly understand your business
+              At the beginning of our collaboration, we take the time to
+              thoroughly understand your business
             </p>
             <ul>
-              <li>Identify and document your business goals and target audience</li>
+              <li>
+                Identify and document your business goals and target audience
+              </li>
               <li>Analyze market trends and competitor strategies</li>
               <li>Gather detailed requirements and key success metrics</li>
             </ul>
@@ -652,10 +659,13 @@
           </div>
           <div class="testimonial-content">
             <div class="testimonial-name">Kelly Garbinsky</div>
-            <div class="testimonial-role">Mental Health Therapist
-</div>
+            <div class="testimonial-role">Mental Health Therapist</div>
             <div class="testimonial-text">
-              After leaving my 9–5, a friend referred me to Shyam Sahu at Smart Vision Tech Labs. The team was responsive, professional, and affordable. My website looks amazing, and now we’re working on SEO. Highly recommend Shyam for web and SEO services - honest and committed!
+              After leaving my 9–5, a friend referred me to Shyam Sahu at Smart
+              Vision Tech Labs. The team was responsive, professional, and
+              affordable. My website looks amazing, and now we’re working on
+              SEO. Highly recommend Shyam for web and SEO services - honest and
+              committed!
             </div>
           </div>
           <div class="quote-icon">&#10077;</div>
@@ -669,7 +679,12 @@
             <div class="testimonial-name">Erich Mayr</div>
             <div class="testimonial-role">Salus Security</div>
             <div class="testimonial-text">
-              I had a great experience working with Shyam from Smart Vision TechLabs on the development of our website for Salus Security. They provided timely communication, fair negotiations, and delivered the project exactly as we needed. The job was well done, and I’m pleased with the results. We’ll definitely be using their services again for future work. Highly recommended!
+              I had a great experience working with Shyam from Smart Vision
+              TechLabs on the development of our website for Salus Security.
+              They provided timely communication, fair negotiations, and
+              delivered the project exactly as we needed. The job was well done,
+              and I’m pleased with the results. We’ll definitely be using their
+              services again for future work. Highly recommended!
             </div>
           </div>
           <div class="quote-icon">&#10077;</div>
@@ -681,10 +696,12 @@
           </div>
           <div class="testimonial-content">
             <div class="testimonial-name">Bhavesh Patel</div>
-            <div class="testimonial-role">Enfield Food & Gas - Managing Director
-</div>
+            <div class="testimonial-role">
+              Enfield Food & Gas - Managing Director
+            </div>
             <div class="testimonial-text">
-              Fast and professional service They have done a great job setting up webpage at reasonable price
+              Fast and professional service They have done a great job setting
+              up webpage at reasonable price
             </div>
           </div>
           <div class="quote-icon">&#10077;</div>
@@ -766,10 +783,9 @@
           </div>
         </div>
       </div>
-      <br>
+      <br />
       <a href="#" class="blog-btn">View All Case Studies</a>
     </section>
-
 
     <script src="script.js"></script>
   </body>
