--- a/index.html
+++ b/index.html
@@ -135,20 +135,7 @@
           <span>→</span>
         </a>
 
-        <div class="features">
-          <div class="feature">
-            <span class="feature-icon">✅ </span>
-            <span>Custom End-to-End Solutions</span>
-          </div>
-          <div class="feature">
-            <span class="feature-icon">✅ </span>
-            <span>Honest & Transparent Pricing</span>
-          </div>
-          <div class="feature">
-            <span class="feature-icon">✅ </span>
-            <span>100% Risk-Free Trial Available</span>
-          </div>
-        </div>
+        
       </div>
     </section>
 
@@ -192,10 +179,27 @@
           </div>
         </div>
       </div>
+
+      <div class="features">
+          <div class="feature">
+            <span class="feature-icon">✅ </span>
+            <span>Custom End-to-End Solutions</span>
+          </div>
+          <div class="feature">
+            <span class="feature-icon">✅ </span>
+            <span>Honest & Transparent Pricing</span>
+          </div>
+          <div class="feature">
+            <span class="feature-icon">✅ </span>
+            <span>100% Risk-Free Trial Available</span>
+          </div>
+        </div>
     </section>
 
+    <!-- <hr /> -->
+
     <!----------- Services -------------->
-    <section style="background-color: #1e293b">
+    <section style="background-color: #f2f2f2">
       <section class="services-section">
         <div class="section-header">
           <div class="section-title">
@@ -269,7 +273,7 @@
             <a href="#" class="read-more">Read More</a>
           </div>
 
-          <div class="service-card">
+          <!-- <div class="service-card">
             <div class="service-icon smm-icon">
               <i class="fa-solid fa-person"></i>
             </div>
@@ -280,7 +284,7 @@
               online presence.
             </p>
             <a href="#" class="read-more">Read More</a>
-          </div>
+          </div> -->
 
           <div class="service-card">
             <div class="service-icon ppc-icon">
@@ -294,7 +298,7 @@
             <a href="#" class="read-more">Read More</a>
           </div>
 
-          <div class="service-card">
+          <!-- <div class="service-card">
             <div class="service-icon seo-icon">
               <i class="fa-solid fa-basket-shopping"></i>
             </div>
@@ -316,7 +320,7 @@
               And Articles To Infographics Videos, Designed Boost.
             </p>
             <a href="#" class="read-more">Read More</a>
-          </div>
+          </div> -->
         </div>
       </section>
     </section>
